// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Job detail responsive layout > matches 380px mobile snapshot 1`] = `
<div
  data-testid="viewport-root"
  style="width: 380px; max-width: 380px;"
>
  <div
    class="p-6 md:p-8"
  >
    <button
      class="btn btn-ghost btn-sm mb-6"
      type="button"
    >
      <svg
        class=""
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="14"
      >
        <path
          d="M19 12H5M12 19l-7-7 7-7"
        />
      </svg>
       
      All jobs
    </button>
    <div
      class="eyebrow mb-3"
    >
      Job Details
    </div>
    <div
      class="flex items-start gap-4 mb-4"
    >
      <div
        class="inline-flex items-center justify-center rounded-full font-semibold text-white shrink-0"
        style="width: 48px; height: 48px; font-size: 18.240000000000002px; background: linear-gradient(135deg, var(--green-600), var(--copper-500));"
      >
        AZ
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <h1
          class="font-display text-3xl md:text-4xl mb-1"
          style="letter-spacing: -0.015em; line-height: 1.1;"
        >
          Software Engineer
        </h1>
        <p
          class="text-sm"
          style="color: var(--muted);"
        >
          ACME Zambia
           · 
          Lusaka
        </p>
      </div>
    </div>
    <div
      class="flex flex-wrap items-center gap-1.5 mb-6"
    >
      <span
        class="tag tag-mono"
      >
        Full time
      </span>
      <span
        class="tag tag-mono"
      >
        Hybrid
      </span>
    </div>
    <div
      class="flex flex-wrap gap-x-5 gap-y-2 mb-6 text-xs"
      style="color: var(--muted);"
    >
      <span
        class="flex items-center gap-1"
      >
        <svg
          class=""
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M12 2a10 10 0 100 20 10 10 0 000-20zM12 6v6l4 2"
          />
        </svg>
         Posted 
        2w ago
      </span>
      <span
        class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium flex items-center gap-1"
        style="background: var(--green-100); color: var(--green-700);"
      >
        Closes in 194 days
      </span>
      <span
        class="ml-auto text-[10px] opacity-60"
      >
        Listed externally
      </span>
    </div>
    <div
      class="mb-6"
    >
      <div
        class="eyebrow mb-3"
      >
        Required Skills
      </div>
      <div
        class="flex flex-wrap gap-1.5"
      >
        <span
          class="tag tag-mono"
        >
          python
        </span>
        <span
          class="tag tag-mono"
        >
          fastapi
        </span>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <div
        class="eyebrow mb-3"
      >
        Description
      </div>
      <div
        class="job-description-markdown prose prose-sm max-w-none text-sm"
        style="color: var(--ink-2);"
      >
        <h2
          class="font-display text-lg mt-6 mb-2"
          style="letter-spacing: -0.01em; color: var(--ink);"
        >
          Role
        </h2>
        

        <p
          class="my-2 leading-relaxed"
        >
          Build APIs.
        </p>
      </div>
    </div>
    <div
      class="flex gap-3 sticky py-3"
      style="background: linear-gradient(to top, var(--surface) 70%, transparent); bottom: calc(var(--mobile-tabbar-offset, 0px));"
    >
      <div
        class="flex flex-col flex-1 gap-2"
      >
        <a
          class="btn btn-primary w-full"
          href="https://example.com/apply"
          rel="noopener noreferrer"
          target="_blank"
        >
          Apply now
          <svg
            class=""
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3"
            />
          </svg>
        </a>
      </div>
      <button
        aria-label="Save job"
        class="btn btn-ghost"
        style="opacity: 1;"
        title="Save this job"
        type="button"
      >
        <svg
          class=""
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="16"
        >
          <path
            d="M19 21l-7-5-7 5V5a2 2 0 012-2h10a2 2 0 012 2z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Job detail responsive layout > matches 1024px desktop snapshot 1`] = `
<div
  data-testid="viewport-root"
  style="width: 1024px; max-width: 1024px;"
>
  <div
    class="p-6 md:p-8"
  >
    <button
      class="btn btn-ghost btn-sm mb-6"
      type="button"
    >
      <svg
        class=""
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="1.75"
        viewBox="0 0 24 24"
        width="14"
      >
        <path
          d="M19 12H5M12 19l-7-7 7-7"
        />
      </svg>
       
      All jobs
    </button>
    <div
      class="eyebrow mb-3"
    >
      Job Details
    </div>
    <div
      class="flex items-start gap-4 mb-4"
    >
      <div
        class="inline-flex items-center justify-center rounded-full font-semibold text-white shrink-0"
        style="width: 48px; height: 48px; font-size: 18.240000000000002px; background: linear-gradient(135deg, var(--green-600), var(--copper-500));"
      >
        AZ
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <h1
          class="font-display text-3xl md:text-4xl mb-1"
          style="letter-spacing: -0.015em; line-height: 1.1;"
        >
          Software Engineer
        </h1>
        <p
          class="text-sm"
          style="color: var(--muted);"
        >
          ACME Zambia
           · 
          Lusaka
        </p>
      </div>
    </div>
    <div
      class="flex flex-wrap items-center gap-1.5 mb-6"
    >
      <span
        class="tag tag-mono"
      >
        Full time
      </span>
      <span
        class="tag tag-mono"
      >
        Hybrid
      </span>
    </div>
    <div
      class="flex flex-wrap gap-x-5 gap-y-2 mb-6 text-xs"
      style="color: var(--muted);"
    >
      <span
        class="flex items-center gap-1"
      >
        <svg
          class=""
          fill="none"
          height="12"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="12"
        >
          <path
            d="M12 2a10 10 0 100 20 10 10 0 000-20zM12 6v6l4 2"
          />
        </svg>
         Posted 
        2w ago
      </span>
      <span
        class="inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium flex items-center gap-1"
        style="background: var(--green-100); color: var(--green-700);"
      >
        Closes in 194 days
      </span>
      <span
        class="ml-auto text-[10px] opacity-60"
      >
        Listed externally
      </span>
    </div>
    <div
      class="mb-6"
    >
      <div
        class="eyebrow mb-3"
      >
        Required Skills
      </div>
      <div
        class="flex flex-wrap gap-1.5"
      >
        <span
          class="tag tag-mono"
        >
          python
        </span>
        <span
          class="tag tag-mono"
        >
          fastapi
        </span>
      </div>
    </div>
    <div
      class="mb-6"
    >
      <div
        class="eyebrow mb-3"
      >
        Description
      </div>
      <div
        class="job-description-markdown prose prose-sm max-w-none text-sm"
        style="color: var(--ink-2);"
      >
        <h2
          class="font-display text-lg mt-6 mb-2"
          style="letter-spacing: -0.01em; color: var(--ink);"
        >
          Role
        </h2>
        

        <p
          class="my-2 leading-relaxed"
        >
          Build APIs.
        </p>
      </div>
    </div>
    <div
      class="flex gap-3 sticky py-3"
      style="background: linear-gradient(to top, var(--surface) 70%, transparent); bottom: calc(var(--mobile-tabbar-offset, 0px));"
    >
      <div
        class="flex flex-col flex-1 gap-2"
      >
        <a
          class="btn btn-primary w-full"
          href="https://example.com/apply"
          rel="noopener noreferrer"
          target="_blank"
        >
          Apply now
          <svg
            class=""
            fill="none"
            height="14"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.75"
            viewBox="0 0 24 24"
            width="14"
          >
            <path
              d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6M15 3h6v6M10 14L21 3"
            />
          </svg>
        </a>
      </div>
      <button
        aria-label="Save job"
        class="btn btn-ghost"
        style="opacity: 1;"
        title="Save this job"
        type="button"
      >
        <svg
          class=""
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.75"
          viewBox="0 0 24 24"
          width="16"
        >
          <path
            d="M19 21l-7-5-7 5V5a2 2 0 012-2h10a2 2 0 012 2z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
